<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:id="@+id/coordinatorLayout"    android:layout_width="match_parent"    android:layout_height="match_parent">    <androidx.constraintlayout.widget.ConstraintLayout        android:layout_width="match_parent"        android:layout_height="match_parent"        tools:layout_editor_absoluteX="0dp"        tools:layout_editor_absoluteY="0dp">        <com.google.android.material.appbar.AppBarLayout            android:id="@+id/appbar"            android:layout_width="0dp"            android:layout_height="79dp"            android:background="@color/white"            app:layout_constraintEnd_toEndOf="parent"            app:layout_constraintStart_toStartOf="parent"            app:layout_constraintTop_toTopOf="parent">            <ImageView                android:id="@+id/imageView9"                android:layout_width="60dp"                android:layout_height="60dp"                android:layout_gravity="center"                android:layout_marginTop="10dp"                android:layout_marginBottom="10dp"                android:src="@drawable/tornado_funnel_storm_twister" />        </com.google.android.material.appbar.AppBarLayout>        <TextView            android:id="@+id/textview_login"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_marginTop="20dp"            android:text="@string/hello_first_fragment"            android:textSize="20sp"            app:layout_constraintEnd_toEndOf="parent"            app:layout_constraintStart_toStartOf="parent"            app:layout_constraintTop_toBottomOf="@+id/appbar" />        <Button            android:id="@+id/button_login"            android:layout_width="320dp"            android:layout_height="55dp"            android:layout_marginTop="76dp"            android:backgroundTint="@color/colorSecondary"            android:gravity="center"            android:text="@string/Login"            android:textColor="@color/white"            app:layout_constraintEnd_toEndOf="parent"            app:layout_constraintHorizontal_bias="0.506"            app:layout_constraintStart_toStartOf="parent"            app:layout_constraintTop_toBottomOf="@+id/editLoginPassword" />        <Button            android:id="@+id/button_signup"            android:layout_width="320dp"            android:layout_height="55dp"            android:layout_marginTop="16dp"            android:backgroundTint="@color/colorSecondary"            android:gravity="center"            android:text="@string/Signup"            android:textColor="@color/white"            app:layout_constraintEnd_toEndOf="parent"            app:layout_constraintStart_toStartOf="parent"            app:layout_constraintTop_toBottomOf="@+id/button_login" />        <EditText            android:id="@+id/editLoginUsername"            android:layout_width="320dp"            android:layout_height="wrap_content"            android:layout_marginTop="128dp"            android:ems="10"            android:hint="Username"            android:inputType="textPersonName"            android:minHeight="50dp"            app:layout_constraintEnd_toEndOf="parent"            app:layout_constraintHorizontal_bias="0.506"            app:layout_constraintStart_toStartOf="parent"            app:layout_constraintTop_toBottomOf="@+id/textview_login" />        <EditText            android:id="@+id/editLoginPassword"            android:layout_width="320dp"            android:layout_height="50dp"            android:layout_marginTop="20dp"            android:ems="10"            android:hint="Password"            android:inputType="textPassword"            android:minHeight="48dp"            app:layout_constraintEnd_toEndOf="parent"            app:layout_constraintStart_toStartOf="parent"            app:layout_constraintTop_toBottomOf="@+id/editLoginUsername" />        <TextView            android:id="@+id/errorMessageView"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_marginTop="74dp"            android:layout_marginBottom="7dp"            android:textColor="@color/colorAlarm"            app:layout_constraintBottom_toTopOf="@+id/button_login"            app:layout_constraintEnd_toEndOf="parent"            app:layout_constraintStart_toStartOf="parent"            app:layout_constraintTop_toBottomOf="@+id/editLoginPassword" />    </androidx.constraintlayout.widget.ConstraintLayout></androidx.constraintlayout.widget.ConstraintLayout>